[package]
name = "vector_protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vector_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", default-features = false, features = ["token", "token_2022"] }